test/TestSuite/Syntax/Errors/time_error.tjp
# MARK: error 2 time_error
project tz "Timezone" "1.0" 2005-06-06-00:00-+0000 - 2005-06-07-0:00-+1401 {
  timezone "Europe/Athens"
}

task item "Project" {
  start 2005-06-06-12:00
}

